# davidnobles-eng.github.io

./: .gitignore  README.md  _quarto.yml  flake.nix  index.qmd  pyproject.toml  resume.qmd
docs/: index.html  resume.html  search.json  styles.css
docs/papers/: index.html
docs/site_libs/bootstrap/: bootstrap-ab750d1875ca689d94091b10fc0569ce.min.css
papers/: index.qmd
